# matthias

./: .gitignore  .travis.yml  Dangerfile  Dockerfile  LICENSE  README.md  config.cfg  external-scripts.json  hubot-scripts.json  makefile  matthias.cabal  matthias.go  matthias_example.conf  matthias_example.service  package-lock.json  package.json  run.sh  stack.yaml  util.coffee
bot/: Apbdoor.hs  BDay.hs  BTC.hs  DrSommer.hs  Firat.hs  MyScript.hs  Porn.hs  _Dudle.hs  _Elbe.hs  _FSR.hs  _Geruecht.hs  _Mensa.hs
data/: bday.json  dudle.json  hogwarts.json
plugins/: drsommer.coffee  dudle.coffee  firat.coffee  fsr.coffee  porn.coffee  simpleresponses.coffee  sudo_ger.coffee  version.coffee
plugins/apbdoor/: apbdoor.go
plugins/bday/: bday.go
plugins/btc/: btc.go
plugins/drsommer/: drsommer.go
plugins/dvb/: dvb.go
plugins/elbe/: elbe.go
plugins/exampleplugin/: exampleplugin.go
plugins/firat/: firat.go
plugins/fsr/: fsr.go
plugins/geruecht/: geruecht.go
plugins/googleimages/: googleimages.go
plugins/help/: help.go
plugins/maintain/: maintain.go
plugins/mensa/: mensa.go
plugins/ping/: ping.go
plugins/porn/: porn.go  titles.go
plugins/portalstate/: portalstate.go
plugins/random/: random.go
scripts/: apbdoor.coffee  bday.coffee  bdaydata.json  btc.coffee  drsommer.coffee  dudle.coffee  elbe.coffee  firat.coffee  fsr.coffee  geruecht.coffee  hogwarts.coffee  justus.coffee  maintain.coffee  marco.coffee  mensa.coffee  porn.coffee  qr.coffee  random.coffee  simpleresponses.coffee  stoll.coffee  sudo_ger.coffee  version.coffee  video.coffee
(+9 files in other folders)
