name:                matthias
version:             0.1
synopsis:            A marvin bot
description:         Please see README.md
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable matthias-bot
  hs-source-dirs:      bot
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , marvin
                     , wreq
                     , random
                     , lens
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , MultiParamTypeClasses
                     , NoImplicitPrelude
